--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2"
 png_encode_mini = "0.1.2"
 primal = "0.2.3"
 rand = "0.7.3"
+rayon = "1.5.0"
 blake3 = "0.3"
